Fixed issue w/ toolbar overflow in small windows

--- a/css/layout.css
+++ b/css/layout.css
@@ -41,6 +41,7 @@ HTML, BODY
 	height: 30px;
 	top: 0px;
 	background-color: #444444;
+	overflow: hidden;
 }
 .upperarea
 {
